--- a/src/pages/intervention-course-lane/intervention-course-lane.html
+++ b/src/pages/intervention-course-lane/intervention-course-lane.html
@@ -25,7 +25,7 @@
     <ion-item-divider>{{'direction' | translate}}</ion-item-divider>
     <ion-item>
       <ion-label [hidden]="true">{{'direction' | translate}}</ion-label>
-      <ion-select class="selected-direction" formControlName="direction" placeholder="{{'direction' | translate}}">
+      <ion-select class="selected-direction" formControlName="direction" placeholder="{{'direction' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
         <ion-option *ngFor="let dir of directions" [value]="dir.id">{{dir.description | uppercase}}</ion-option>
       </ion-select>
     </ion-item>
