--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -15,13 +15,13 @@
       <ion-item-divider>{{'building' | translate}}</ion-item-divider>
       <ion-item *ngIf="allTypes && allTypes.buildingTypes" >
         <ion-label>{{'type' | translate}}</ion-label>
-        <ion-select formControlName="idBuildingType">
+        <ion-select formControlName="idBuildingType" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let t of allTypes.buildingTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label>{{'garage' | translate}}</ion-label>
-        <ion-select formControlName="garageType">
+        <ion-select formControlName="garageType" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option value="0">{{'no' | translate}}</ion-option>
           <ion-option value="1">{{'yes' | translate}}</ion-option>
           <ion-option value="2">{{'detached' | translate}}</ion-option>
@@ -41,7 +41,7 @@
             <ion-col width-50>
               <ion-item>
                 <ion-label [hidden]="true">{{'unit' | translate}}</ion-label>
-                <ion-select class="unit-select" item-end formControlName="idUnitOfMeasureHeight" *ngIf="dimensionUnitOfMeasure" placeholder="{{'unit' | translate}}">
+                <ion-select class="unit-select" item-end formControlName="idUnitOfMeasureHeight" *ngIf="dimensionUnitOfMeasure" placeholder="{{'unit' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
                   <ion-option *ngFor="let t of dimensionUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
                 </ion-select>
               </ion-item>
@@ -64,7 +64,7 @@
           <ion-col width-50>
             <ion-item>
               <ion-label [hidden]="true">{{'unit' | translate}}</ion-label>
-              <ion-select class="unit-select" item-end placeholder="{{'unit' | translate}}" formControlName="idUnitOfMeasureEstimatedWaterFlow" *ngIf="ratesUnitOfMeasure">
+              <ion-select class="unit-select" item-end placeholder="{{'unit' | translate}}" formControlName="idUnitOfMeasureEstimatedWaterFlow" *ngIf="ratesUnitOfMeasure" okText="Ok" cancelText="{{'cancel' | translate}}">
                 <ion-option *ngFor="let t of ratesUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
               </ion-select>
             </ion-item>
@@ -79,19 +79,19 @@
       <ion-item-divider>{{'construction' | translate}}</ion-item-divider>
       <ion-item>
         <ion-label>{{'type' | translate}}</ion-label>
-        <ion-select formControlName="idConstructionType" *ngIf="allTypes && allTypes.constructionTypes" color="secondary">
+        <ion-select formControlName="idConstructionType" *ngIf="allTypes && allTypes.constructionTypes" color="secondary" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let t of allTypes.constructionTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label>{{'fireResistance' | translate}}</ion-label>
-        <ion-select formControlName="idConstructionFireResistanceType" *ngIf="allTypes && allTypes.constructionFireResistanceTypes">
+        <ion-select formControlName="idConstructionFireResistanceType" *ngIf="allTypes && allTypes.constructionFireResistanceTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let t of allTypes.constructionFireResistanceTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label>{{'siding' | translate}}</ion-label>
-        <ion-select formControlName="idBuildingSidingType" *ngIf="allTypes && allTypes.buildingSidingTypes">
+        <ion-select formControlName="idBuildingSidingType" *ngIf="allTypes && allTypes.buildingSidingTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let t of allTypes.buildingSidingTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
         </ion-select>
       </ion-item>
@@ -101,13 +101,13 @@
       <ion-item-divider>{{'roof' | translate}}</ion-item-divider>
       <ion-item>
         <ion-label>{{'type' | translate}}</ion-label>
-        <ion-select formControlName="idRoofType" *ngIf="allTypes && allTypes.roofTypes">
+        <ion-select formControlName="idRoofType" *ngIf="allTypes && allTypes.roofTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let t of allTypes.roofTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label>{{'material' | translate}}</ion-label>
-        <ion-select formControlName="idRoofMaterialType" *ngIf="allTypes && allTypes.roofMaterialTypes">
+        <ion-select formControlName="idRoofMaterialType" *ngIf="allTypes && allTypes.roofMaterialTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let t of allTypes.roofMaterialTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-option>
         </ion-select>
       </ion-item>
