--- a/src/pages/building-water-sprinklers/building-water-sprinklers.html
+++ b/src/pages/building-water-sprinklers/building-water-sprinklers.html
@@ -14,7 +14,7 @@
 
     <ion-item  [class.invalid]="!form.controls.idSprinklerType.valid">
       <ion-label>{{'type' | translate}}</ion-label>
-      <ion-select formControlName="idSprinklerType">
+      <ion-select formControlName="idSprinklerType" okText="Ok" cancelText="{{'cancel' | translate}}">
         <ion-option *ngFor="let t of types" [value]="t.id">{{t.name}}</ion-option>
       </ion-select>
     </ion-item>
@@ -28,13 +28,13 @@
       </ion-item>
       <ion-item>
         <ion-label>{{'wall' | translate}}</ion-label>
-        <ion-select formControlName="wall" placeholder="{{'wall' | translate}}">
+        <ion-select formControlName="wall" placeholder="{{'wall' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let wall of walls">{{wall}}</ion-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label>{{'division' | translate}}</ion-label>
-        <ion-select formControlName="sector" placeholder="{{'division' | translate}}">
+        <ion-select formControlName="sector" placeholder="{{'division' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-option *ngFor="let sector of sectors">{{sector}}</ion-option>
         </ion-select>
       </ion-item>
