--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -5,10 +5,13 @@
 
   <ion-content color="caucaRed">
     <ion-list class="menu-items">
-      <button ion-item menuClose class="text-menu" *ngFor="let menuItem of menuItems" (click)="openPage(menuItem.page)">
-        <ion-icon item-left [name]="menuItem.icon"></ion-icon>
-        <span ion-text>{{menuItem.title}}</span>
-      </button>
+
+      <div *ngFor="let menuItem of menuItems">
+        <button ion-item menuClose class="text-menu" *ngIf="menuItem.enabled" (click)="openPage(menuItem.page)">
+          <ion-icon item-left [name]="menuItem.icon"></ion-icon>
+          <span ion-text>{{menuItem.title}}</span>
+        </button>
+      </div>
 
       <button *ngIf="mustShowPlanMenu" ion-item menuClose class="text-menu" (click)="goToInspectionQuestions()">
         <ion-icon item-left name="list-box"></ion-icon>
