--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -26,7 +26,7 @@
         </ion-item-group>
     </ion-list>
 
-    <building-child-pictures [repo]="picRepo" formControlName="id">{{'loading' | translate}}</building-child-pictures>
+    <building-child-pictures [repo]="picRepo" [saveAuto]="false" formControlName="id">{{'loading' | translate}}</building-child-pictures>
 </ion-content>
 
 <ion-footer class="page-footer" *ngIf="!isNew">
