--- a/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
+++ b/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title>{{'themeSelection' | translate}}</ion-title>
   </ion-navbar>
-  <ion-searchbar [(ngModel)]="currentSearch" (ionInput)="onSearch($event)"></ion-searchbar>
+  <ion-searchbar [(ngModel)]="currentSearch" (ionInput)="onSearch($event)" placeholder="{{'searchHolder' | translate}}"></ion-searchbar>
 </ion-header>
 
 <ion-content>
