--- a/src/pages/building-particular-risks/building-particular-risks.html
+++ b/src/pages/building-particular-risks/building-particular-risks.html
@@ -33,4 +33,8 @@
   </inspection-building-particular-risk-detail>
 
 </ion-content>
+<ion-footer class="page-footer">
+  <ion-navbar>
+  </ion-navbar>
+</ion-footer>
 
