--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -30,3 +30,8 @@
       </ion-item-group>
   </ion-list>
 </ion-content>
+
+<ion-footer class="page-footer">
+  <ion-toolbar>
+  </ion-toolbar>
+</ion-footer>
