--- a/src/pages/inspection-question-summary/inspection-question-summary.html
+++ b/src/pages/inspection-question-summary/inspection-question-summary.html
@@ -32,3 +32,7 @@
         </div>
     </div>
 </ion-content>
+<ion-footer class="page-footer">
+    <ion-toolbar>
+    </ion-toolbar>
+</ion-footer>
