--- a/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
+++ b/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
@@ -20,3 +20,8 @@
     </ion-item-group>
   </ion-list>
 </ion-content>
+
+<ion-footer class="page-footer">
+  <ion-navbar>
+  </ion-navbar>
+</ion-footer>
