--- a/src/pages/hazardous-material-selection/hazardous-material-selection.html
+++ b/src/pages/hazardous-material-selection/hazardous-material-selection.html
@@ -18,3 +18,10 @@
     </button>
   </ion-list>
 </ion-content>
+
+<ion-footer class="page-footer">
+  <ion-toolbar>
+    <ion-buttons>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
