feat(#140) Change navbar to tool-bar in footer

--- a/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
+++ b/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
@@ -22,6 +22,6 @@
 </ion-content>
 
 <ion-footer class="page-footer">
-  <ion-navbar>
-  </ion-navbar>
+  <ion-toolbar>
+  </ion-toolbar>
 </ion-footer>
