--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
@@ -130,12 +130,12 @@
 </ion-content>
 
 <ion-footer class="page-footer">
-    <ion-navbar>
+    <ion-toolbar>
         <ion-buttons left>
             <button *ngIf="!isNew" ion-button icon-start (click)="onDeleteHazardousMaterial()">
                 <ion-icon name="trash"></ion-icon>
                 {{'hazardousMaterialDelete' | translate}}
             </button>
         </ion-buttons>
-    </ion-navbar>
+    </ion-toolbar>
 </ion-footer>
