--- a/src/pages/building-particular-risks/building-particular-risks.html
+++ b/src/pages/building-particular-risks/building-particular-risks.html
@@ -34,7 +34,7 @@
 
 </ion-content>
 <ion-footer class="page-footer">
-  <ion-navbar>
-  </ion-navbar>
+  <ion-toolbar>
+  </ion-toolbar>
 </ion-footer>
 
