--- a/src/pages/building-pnap-detail/building-pnap-detail.html
+++ b/src/pages/building-pnap-detail/building-pnap-detail.html
@@ -95,12 +95,12 @@
 </ion-content>
 
 <ion-footer class="page-footer">
-  <ion-navbar>
+  <ion-toolbar>
     <ion-buttons left>
       <button *ngIf="!isNew" ion-button  icon-start (click)="onDeletePnap()">
         <ion-icon name="trash"></ion-icon>
         {{'pnapDeleteButton' | translate}}
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-footer>
