--- a/src/pages/building-water-sprinklers/building-water-sprinklers.html
+++ b/src/pages/building-water-sprinklers/building-water-sprinklers.html
@@ -58,12 +58,12 @@
 </ion-content>
 
 <ion-footer class="page-footer">
-  <ion-navbar>
+  <ion-toolbar>
     <ion-buttons left>
       <button *ngIf="!isNew" ion-button  icon-start (click)="onDeleteSprinkler()">
         <ion-icon name="trash"></ion-icon>
         {{'fireSprinklerDelete' | translate}}
       </button>
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-footer>
