--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -116,6 +116,6 @@
   </ion-list>
 </ion-content>
 <ion-footer class="page-footer">
-  <ion-navbar>
-  </ion-navbar>
+  <ion-toolbar>
+  </ion-toolbar>
 </ion-footer>
