feat(#150) Add validation on user acces result + disable transversal

--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -45,7 +45,8 @@
                     formControlName="idLaneTransversal"
                     [displayFieldName]="'name'"
                     [keyFieldName]="'id'"
-                    [dataService]="laneService"></search-box>
+                    [dataService]="laneService"
+                    [isDisabled]="!userAllowed"></search-box>
         </ion-list>
     </form>
     <ion-card>
